Ensure more consistent spacing and colors

--- a/src/base/button.styl
+++ b/src/base/button.styl
@@ -1,5 +1,6 @@
 // Copyright 2020 Furqan Software Ltd. All Rights Reserved.
 
+@require './const'
 @require './func'
 @require './palette'
 
@@ -39,79 +40,52 @@
 		padding 0.25rem 0.5rem
 		font-size 0.95rem
 
-_button(name, bg, text, edge=10%, hover=30%, active=15%)
+_button(name, bg, text, edge=20%, hover=10%, active=20%)
 	.btn
 		&.-{name}
 			color text
+			border 1px solid darken(bg, edge)
 			background-color bg
-			box-shadow inset 0 -2px 0 darken(bg, edge)
+			transition box-shadow $fast ease-in
 
-		&.-{name}:hover,
+		&.-{name}:hover
+			background-color darken(bg, hover)
+			box-shadow inset 0 0 0 0.125rem darken(bg, ((edge+hover)/2))
+
 		&.-{name}:focus
-			box-shadow inset 0 -2px 0 darken(bg, hover)
+			background-color darken(bg, hover)
+			box-shadow inset 0 0 0 0.125rem darken(bg, ((edge+hover)/2)), 0 0 0 0.25rem $blueglow
+			z-index 1
 
-		&.-{name}:active,
 		&.-{name}.-active
-			background-color darken(bg, (active/3))
-			box-shadow inset 1px 2px 0 darken(bg, active)
+			background-color darken(bg, active)
+			box-shadow inset 0 0 0 0.125rem darken(bg, ((edge+hover)/2))
 			
 		&.-{name}.-disabled,
 		&.-{name}[disabled]
 			box-shadow none
 	
 	.-open > &.-{name}.-toggle
-		background-color darken(bg, (active/3))
-		box-shadow inset 1px 2px 0 darken(bg, active)
+		background-color darken(bg, active)
+		box-shadow inset 0 0 0 0.125rem darken(bg, ((edge+hover)/2))
 
 _button('default', #e1e5ec, $dark)
-_button('blue', $blue, white, 20%, 45%, 22.5%)
-_button('red', $red, white, 20%, 45%, 22.5%)
-
-.btn.-white
-	border 1px solid lighten($silver, 50%)
-	color $dark
-	background-color white
-	box-shadow inset 0 -2px 0 lighten($silver, 50%)
-
-	&:hover,
-	&:focus
-		border-color $silver
-		box-shadow inset 0 -2px 0 $silver
-
-	&:active,
-	&.-active
-		background-color lighten($silver, 15%)
-		box-shadow inset 1px 2px 1px lighten($silver, 50%)
-
-.-open > &.-white.-toggle
-	background-color lighten($silver, 15%)
-	box-shadow inset 1px 2px 1px lighten($silver, 50%)
-
-.btn.-simple
-	border 1px solid lighten($silver, 50%)
-	color $dark
-	background-color white
-
-	&:hover,
-	&:focus,
-	&:active,
-	&.-active
-		border-color $silver
+_button('blue', $blue, white)
+_button('red', $red, white)
+_button('simple', white, $dark)
+_button('subtle', white, $dark)
 
 .btn.-subtle
 	border 1px solid transparent
-	color $dark
-
-	&:hover,
-	&:focus,
-	&:active,
-	&.-active
-		border-color $silver
+	background-color transparent
 
 .btngroup
 	display flex
 	
 	> .btn
+		~ .btn
+			border-left 0
+
 		&:not(:first-child):not(:last-child)
 			border-radius 0
 
