--- a/src/base/form.styl
+++ b/src/base/form.styl
@@ -15,14 +15,14 @@
 		display block
 		width 100%
 		padding 0.25rem 0.5rem
-		border 1px solid mix($dark, $silver, 10)
+		border 1px solid $dark500
 		border-radius 0.25rem
 		font-size 1rem
 		background-color white
 		color $dark
 		box-shadow inset 0 0.25rem 0.125rem $shadow0
 		transition border-color $fast ease-in, box-shadow $fast ease-in
-		
+
 		&:focus
 			border-color $blue
 			outline 0
